--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: #282F44; */
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height:100vh; 
 }
 
 code {
