added some styling

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,87 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+button {
+  position: relative;
+
+  display: block;
+  margin: 30px;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+
+  overflow: hidden;
+
+  border-width: 0;
+  outline: none;
+  border-radius: 4px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+  
+  background-color: #2ecc71;
+  color: #ecf0f1;
+  
+  transition: background-color .3s;
+  font-family: system-ui;
+}
+
+button:hover, button:focus {
+  background-color: #27ae60;
+}
+
+button > * {
+  position: relative;
+}
+
+button span {
+  display: block;
+  padding: 0;
+}
+
+button:before {
+  content: "";
+  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  display: block;
+  width: 0;
+  padding-top: 0;
+    
+  border-radius: 100%;
+  
+  background-color: rgba(236, 240, 241, .3);
+  
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+button:active:before {
+  width: 120%;
+  padding-top: 120%;
+  
+  transition: width .2s ease-out, padding-top .2s ease-out;
+}
+
+/* Styles, not important */
+
+button.orange {
+  background-color: #e67e22;
+}
+
+button.orange:hover, button.orange:focus {
+  background-color: #d35400;
+}
+
+button.red {
+  background-color: #e74c3c;
+}
+
+button.red:hover, button.red:focus {
+  background-color: #c0392b;
+}
