--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   justify-content: center;
   align-items: center;
   height:100vh; 
-  background-color: #ffffff;
+  background-color: #f0f6f6;
 }
 
 code {
